# realtimed

./: .gitignore  FreeRTOSConfig.h  README.md  lpm.c  lpm.h  realtimed.c  realtimed.h  rsc_table.c  srtm_config.h
armgcc/: CMakeLists.txt  CMakePresets.json  config.cmake  flags.cmake  mcux_include.json
board/: board.c  board_can.c  board_descr.c  board_i2c.c  board_io.c  board_pwm.c  board_sai.c  board_spi.c  board_uart.c  clock_config.c  pinmux.c
include/board/: board.h  board_can.h  board_config.h  board_descr.h  board_dev.h  board_features.h  board_i2c.h  board_io.h  board_pwm.h  board_sai.h  board_spi.h  board_uart.h  clock_config.h  pinmux.h
include/fdt/: fdt.h  libfdt.h  libfdt_internal.h
include/srtm/: app_srtm.h  srtm_i2c_service.h  srtm_io_service.h  srtm_keypad_service.h  srtm_pwm_service.h  srtm_rpmsg_endpoint.h  srtm_sai_edma_adapter.h  srtm_spi_service.h  srtm_uart_service.h
lib/libfdt/: fdt.c  fdt_addresses.c  fdt_check.c  fdt_empty_tree.c  fdt_overlay.c  fdt_ro.c  fdt_rw.c  fdt_strerror.c  fdt_sw.c  fdt_wip.c
patches/__repo__/core/: 0001-devices-MIMX8UDx-drivers-fsl_upower-prevent-deadlock.patch
srtm/: app_srtm.c
srtm/channels/: srtm_rpmsg_endpoint.c
srtm/services/: srtm_audio_service.c  srtm_i2c_service.c  srtm_io_service.c  srtm_keypad_service.c  srtm_lfcl_service.c  srtm_pwm_service.c  srtm_sai_edma_adapter.c  srtm_spi_service.c  srtm_uart_service.c
